# Voronoi-3D

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/data/: points3
assets/meshes/: gptsample.off
assets/output/: BasicOFF.off  ComplexTriangulation.off  ComplexVoronoi.off  Triangulation.off  Voronoi.off
example/: BasicDelaunayToOFF.cpp  BasicDelaunayVoronoi.cpp  BasicOFF.cpp  BasicVoronoiToOFF.cpp  CMakeLists.txt  Complex.cpp
example/CGAL/: VectorConvexHull2.cpp
example/CGAL/Basic/: PointsAndSegments.cpp
example/CGAL/LCC/: Voronoi3.cpp
example/CGAL/Qt5/: DrawLCC.cpp  DrawSurfaceMesh.cpp  DrawTriangulation3.cpp
example/OpenGL/Basic/: Quad.cpp
include/: Camera.h  Definitions.h  DelaunayVoronoiManager.h  Mesh.h  OFFConstructor.h  PathManager.h  PointsGenerator.h  ShaderProgram.h  Volume.h
test/: CMakeLIsts.txt
test/CGAL/: test.cpp
